# SpriteSheetSplitter

./: CMakeLists.txt  LICENSE.md  README.md  Splitter.cpp  Splitter.h  SplitterJobHandler.cpp  SplitterJobHandler.h  main.cpp  splitterOptions.h
IO/: IOOptions.hpp  JSONConfigParser.cpp  JSONConfigParser.hpp  SpriteSaver.cpp  SpriteSaver.h  SpriteSheetIO.cpp  SpriteSheetIO.h  SpriteSheetLoader.cpp  SpriteSheetLoader.h
libraries/: CMakeLists.txt
libraries/struct_mapping/: CMakeLists.txt  license.txt  member.h
libraries/struct_mapping/options/: option_remap.h
lodepng/: CMakeLists.txt
lodepng/src/: Makefile
logging/: LoggerTags.cpp  LoggerTags.hpp
util/: CharSheetInfo.h  CharSheetNames.h  RegexWrapper.hpp  SimpleTimer.h  SplitterOptions.h  SpriteSheetData.h  SpriteSheetPNGData.h  SpriteSheetType.h  SpriteSplittingData.h  SpriteSplittingStatus.h
